# Ohjelmistotekniikka-harjoitustyo-2021

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: credit.py  main.py  ui.py  wheel.py
src/entities/: game_logic.py  payoff_logic.py  wheel.py
src/test/: ui_test.py
src/tests/: credit_test.py  game_logic_test.py  payoff_logic_test.py  ui_test.py  wheel_test.py
src/ui/: ui.py
